--- a/students/index.html
+++ b/students/index.html
@@ -44,11 +44,11 @@
                   <div id="tech" class="collapse" aria-labelledby="tech-support" data-parent="#stu-support">
                       <div class="card-body">
                           <h3 id="loans">Laptop Loans</h3>
-                          <p>VCU is providing a limited number of laptops to assist with online learning that will be available <i>on loan</i> for students. These laptops will be available on a first-come, first-served basis. The laptops that are being distributed are subject to VCU computing use policies. More information will be available during the week of March 23rd.  Please check back here for an update.</p>
+                          <p>VCU is providing a limited number of laptops to assist with online learning that will be available <em>on loan</em> for students. These laptops will be available on a first-come, first-served basis. The laptops that are being distributed are subject to VCU computing use policies. More information will be available during the week of March 23rd.  Please check back here for an update.</p>
 
                           <p>For our veterans who need a laptop computer a local veteran support organization,<a href="https://techfortroops.org/"> Tech for Troops</a>, provides FREE laptops to veterans who are going back to school.</p>
                           <h3 id="access">Access to the Internet</h3>
-                          <p>Students can add “hotspots” to their wireless cellphone plans or continue to access VCU SafeNet around campus (sitting in your car in the parking decks or at outside tables around campus, etc.)</p>
+                          <p>Students can add “hotspots” to their wireless cellphone plans or continue to access VCU SafeNet around campus (sitting in your car in legal parking areas or at outside tables around campus, etc.)</p>
 
                           <p>A number of companies are also offering both reduced cost and increased bandwidth options.</p>
                           <ul>
@@ -68,7 +68,7 @@
                             <li><a href="https://drive.google.com/drive/folders/1yR3OuWKlc-AArmTJMdF_C4Ixj6RtM40M">Zoom guides for students</a></li>
                             <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&amp;feature=youtu.be">Tips for making good videos and screencasts</a></li>
                           </ul>
-                          <h3 id="tech-support">Technology Support</h3>
+                          <h3>Technology Support</h3>
                           <ul>
                             <li>Technology Services has created a guide to help students<a href="https://ts.vcu.edu/askit/network-services/home-network-troubleshooting/"> troubleshoot home networks.</a></li>
                             <li>The IT Support Center call center (for both campuses) can be reached at (804) 828-2227 during regular business hours and provides full-service phone support. Due to the volume of calls, callers are asked to be patient.</li>
@@ -133,7 +133,7 @@
                           <ul>
                             <li>Use the <a href="https://vcu.navigate.eab.com/app/">Navigate app</a> to schedule an appointment with your academic advisor. Advisors can talk via phone, chat, or video conferencing - you have many options!</li>
                             <li>For more information about your degree program and academic advising resources, visit our <a href="https://academicadvising.vcu.edu/">VCU Advising website</a> or your departmental website.</li>
-                            <li>The last date to withdraw from Spring 2020 courses is April 17th (this is a date change).  <b>We urge any student who is considering a course withdrawal to </b><a href="https://vcu.navigate.eab.com/app/"><b>schedule an appointment</b></a><b> with their advisor PRIOR to withdrawing</b>.  If you are a student with a registration hold and are unable to withdraw via eServices, you must email <a href="mailto:RAR@vcu.edu">RAR@vcu.edu</a> from your VCU email address with your V# and the course(s) you are requesting to be withdrawn from.</li>
+                            <li>The last date to withdraw from Spring 2020 courses is April 17th (this is a date change).  <strong>We urge any student who is considering a course withdrawal to </strong><a href="https://vcu.navigate.eab.com/app/"><strong>schedule an appointment</strong></a><strong> with their advisor PRIOR to withdrawing</strong>.  If you are a student with a registration hold and are unable to withdraw via eServices, you must email <a href="mailto:RAR@vcu.edu">RAR@vcu.edu</a> from your VCU email address with your V# and the course(s) you are requesting to be withdrawn from.</li>
                             <li>Fall 2020 course registration begins on March 31st (this is a date change).  Please review what day you can <a href="https://rar.vcu.edu/registration/dates/">register for classes</a> and try to “meet” (remotely) with your advisor prior to this important date.</li>
                           </ul>
                       </div>
@@ -232,13 +232,13 @@
 
                           <p>On March 12, 2020, Governor Northam declared a State of Emergency in the Commonwealth due to the state-wide spread of COVID-19. Governor Northam announced the following <a href="https://www.virginia.gov/coronavirus-updates/">actions</a> to protect working Virginians impacted by the COVID-19 outbreak:</p>
                           <ul>
-                            <li><i>No waiting for unemployment benefits</i>. Governor Northam has directed the Commissioner of the Virginia Employment Commission to waive the one-week waiting period to ensure workers can receive benefits as soon as possible.</li>
+                            <li><em>No waiting for unemployment benefits</em>. Governor Northam has directed the Commissioner of the Virginia Employment Commission to waive the one-week waiting period to ensure workers can receive benefits as soon as possible.</li>
                           </ul>
                           <ul>
-                            <li><i>Enhanced eligibility for unemployment. </i>Workers may be eligible to receive unemployment benefits if an employer needs to temporarily slow or cease operations due to COVID-19. If a worker has been issued a notice to self-quarantine by a medical or public health official and is not receiving paid sick or medical leave from their employer, they may be eligible to receive unemployment benefits. In addition, a worker may be eligible for unemployment benefits if they must stay home to care for an ill family member and are not receiving paid family medical leave from their employer.</li>
+                            <li><em>Enhanced eligibility for unemployment. </em>Workers may be eligible to receive unemployment benefits if an employer needs to temporarily slow or cease operations due to COVID-19. If a worker has been issued a notice to self-quarantine by a medical or public health official and is not receiving paid sick or medical leave from their employer, they may be eligible to receive unemployment benefits. In addition, a worker may be eligible for unemployment benefits if they must stay home to care for an ill family member and are not receiving paid family medical leave from their employer.</li>
                           </ul>
                           <ul>
-                            <li><i>Fewer restrictions.</i> For individuals receiving unemployment insurance, Governor Northam is directing the <a href="http://www.vec.virginia.gov/node/11699">Virginia Employment Commission</a> to give affected workers special consideration on deadlines, mandatory re-employment appointments, and work search requirements.</li>
+                            <li><em>Fewer restrictions.</em> For individuals receiving unemployment insurance, Governor Northam is directing the <a href="http://www.vec.virginia.gov/node/11699">Virginia Employment Commission</a> to give affected workers special consideration on deadlines, mandatory re-employment appointments, and work search requirements.</li>
                           </ul>
                           <h3>VCU Emergency funding for students impacted by COVID-19</h3>
 
@@ -302,10 +302,11 @@
             </div>
         </div>
         <!-- student Modal -->
-          <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="helpModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
+                  <div class="modal-title" id="helpModalLabel">Student Assistance</div>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -320,10 +321,11 @@
             </div>
           </div>
            <!-- faculty Modal -->
-          <div class="modal fade" id="facHelpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="facHelpModal" tabindex="-1" role="dialog" aria-labelledby="facHelpModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
+                  <div class="modal-title" id="facHelpModalLabel">Refer a Student for Assistance</div>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
