rec sports, bottom padding

--- a/students/index.html
+++ b/students/index.html
@@ -19,7 +19,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/main.css?ver=2.7">
+        <link rel="stylesheet" href="../css/main.css?ver=2.8">
     </head>
     <body>
       <!--this is an evolving document -- be kind to it and the intent of the authors-->
@@ -158,6 +158,7 @@
                           <p><a href="https://counseling.vcu.edu//">University Counseling Services</a> (UCS) continues to provide comprehensive evaluation and consultation for students on best options for their mental health care. If you would like to speak to a clinician or for support related to sexual violence, intimate partner violence, or stalking, please contact us at (804) 828-6200 between 8:00 a.m. and 4:30 p.m.</p>
 
                           <p>If it is an after-hours emergency, then please contact the VCU police at (804) 828-1234 and ask to speak to the on-call counselor.  The <a href="https://police.vcu.edu/stay-safe/livesafe/">LiveSafe app</a> is also available for non-emergencies.</p>
+                          <p><a href="https://recsports.vcu.edu/about/virtual-programs/">Recreational Sports</a> has prepared virtual programming that is available to everyone at no cost. Check out what's available at the new <a href="https://recsports.vcu.edu/about/virtual-programs/">Virtual Programming section</a> on the Rec Sports website.</p>
                       </div>
                   </div>
               </div>
@@ -300,9 +301,10 @@
               </div>
               <!--help card end-->
             </div>
+            <div class="bottom-padding"></div>
         </div>
         <!-- student Modal -->
-          <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="helpModalLabel" aria-hidden="true">
+         <!--  <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="helpModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -319,9 +321,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
            <!-- faculty Modal -->
-          <div class="modal fade" id="facHelpModal" tabindex="-1" role="dialog" aria-labelledby="facHelpModalLabel" aria-hidden="true">
+          <!-- <div class="modal fade" id="facHelpModal" tabindex="-1" role="dialog" aria-labelledby="facHelpModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -338,7 +340,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
        
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         
