--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img class="focus-icon" src="imgs/learning.png" alt="An icon representing teaching.">
-                        <h2>Support for Online Instruction</h2>                        
+                        <h2>Remote Instruction Support</h2>                        
                         <p>Available Monday-Friday, 8:00am-5:00pm, and by appointment outside of those hours.</p>
                         <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">Complete this short form for support from ALT Lab/Online@VCU.</a>
 
