--- a/students/index.html
+++ b/students/index.html
@@ -26,7 +26,7 @@
         <div class="container content-primary__content" id="keep-on">
           <div class="row justify-content-md-center" id="top">            
             <div class="col-md-8">
-              <h1>Keep Learning</h1>
+              <h1>Keep On Learning</h1>
               <p>Student success remains the core of our mission, and during these “remote” times, our goal across the university is to continue to provide resources to help all of our students accomplish the successful completion of this semester.  Below you will find a summary list of resources available to students.  If you cannot find an answer to your question or resource need, the referral forms at the bottom of this page can be submitted for additional assistance from our campus officials responsible for the area of your request.</p>
             </div>
 
