--- a/index.html
+++ b/index.html
@@ -39,14 +39,7 @@
                     </p>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
-                        <img class="focus-icon" src="imgs/learning.png" alt="An icon representing teaching.">
-                        <h2>Remote Instruction Support</h2>                        
-                        <p>Available Monday-Friday, 8:00am-5:00pm, and by appointment outside of those hours.</p>
-                        <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">Complete this short form for support from ALT Lab/Online@VCU.</a>
-
-                    </div>
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <img class="focus-icon" src="imgs/tech.png" alt="An icon representing hardware and software.">
                         <h2>Technical Support</h2>
                         <p> The IT Support Center provides support for hardware (i.e. laptops, etc.) and other enterprise services (i.e. Google Docs, VPN, forms, etc.)</p>
@@ -54,8 +47,16 @@
                             <a href="mailto:ITSC@vcu.edu">ITSC@vcu.edu</a> or (804) 828-2227
                         </p>
                     </div>
+                     <div class="col-md-5 offset-2">
+                        <img class="focus-icon" src="imgs/learning.png" alt="An icon representing teaching.">
+                        <h2>Instructional Support</h2>                        
+                        <p>Available Monday-Friday, 8:00am-5:00pm, and by appointment outside of those hours.</p>
+                        <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">Complete this short form for support from ALT Lab/Online@VCU.</a>
+
+                    </div>
                 </div>
-                <h3>General Information</h3>
+                
+                <h2>General Information</h2>
                 <p>Please share these <a href="https://altlab.vcu.edu/rapid-response/students">Keep Learning student support resources with your students.</a></p>
                 <p><a href="https://covid-19.vcu.edu/">Keep up to date on all COVID-19 communication from VCU.</a></p>
                 <h2 id="kot-form">Keep on Teaching Form</h2>
