trying to merge this

--- a/students/remix.html
+++ b/students/remix.html
@@ -24,14 +24,14 @@
     <body>
       <!--this is an evolving document -- be kind to it and the intent of the authors-->
         <div class="container content-primary__content" id="keep-on">
-          <div class="row">
-            <div class="col-md-12">
+          <div class="row justify-content-md-center">
+            <div class="col-md-9">
                <h1>Keep on Learning</h1>
                <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person courses will need to transition to a remote format. Don’t worry! Your professors will do everything they can to make sure your course stays on track.</p>
                <h2>The Goal = Keep Learning</h2>
                <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
             </div>
-            <div class="col-md-12" id="online-tips">
+            <div class="col-md-9" id="online-tips">
                <h2>Tips for Success When Learning Online</h2>
                <div class="row">
                 <div class="col-md-3">
