--- a/students/remix.html
+++ b/students/remix.html
@@ -31,6 +31,37 @@
                <h2>The Goal = Keep Learning</h2>
                <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
             </div>
+             <!--row nav-->
+            <div class="row" id="know-more">
+              <div class="col-md-12">
+                <h2>What do you want to know more about?</h2>
+              </div>
+              <div class="col-md-3"><a class="app-nav" href="#online-tips">
+                 Online Learning Tips
+                </a></div>
+              <div class="col-md-3"><a class="app-nav" href="#help">
+                  Get help now
+                </a></div>
+                <div class="col-md-3"><a class="app-nav" href="#tech-support">
+                  Tech Support
+                </a></div>
+              <div class="col-md-3"><a class="app-nav" href="#wifi">
+                  Internet Access
+                </a></div>
+              <div class="col-md-3"><a class="app-nav" href="#academic-support">
+                  Academic Support
+                </a></div>
+              <div class="col-md-3"><a class="app-nav" href="#policies">
+                  Policies
+                </a></div>
+                <div class="col-md-3"><a class="app-nav" href="#accommodations">
+                  Accommodations
+                </a></div>
+                <div class="col-md-3"><a class="app-nav" href="#labs">
+                  Labs/Placements
+                </a></div>
+            </div>
+            <!--end nav-->
             <div class="col-md-9" id="online-tips">
                <h2>Tips for Success When Learning Online</h2>
                <div class="row">
@@ -41,37 +72,36 @@
                   <p class="inline-fit">Even if you've been successful with your face-to-face courses, it helps to think about how your academic life is going to change when your courses move online. The Campus Learning Center has created these <a href="https://clc.vcu.edu/learningonline/">tips for learning online.</a> These nine tips will help ease the transition to online learning.</p>
                 </div>
               </div>
-                       <h2>The Ram Frame of Mind</h2>
-                       <p>
-                           <strong>Be well</strong>- Our main priority is your health! Please check out the health tips and FAQs on the <a href="https://health.students.vcu.edu/">VCU University Health Services</a>. 
-                       </p>
-                       <p>
-                          <strong>Be proactive</strong>- The more you prepare in advance, the easier the transition. Update your contact information with VCU. At least once a day, check your <a href="http://mail.google.com/a/mymail.vcu.edu">VCU email</a> and any course communication tools (for example, <a href="https://blackboard.vcu.edu/">Blackboard</a>) for updates. 
-                       </p>
-                       <p>
-                          <strong>Stay calm</strong>- Even though you may feel quite stressed or uncertain, try your best to breathe in, breathe out, repeat. Staying calm can help you focus, make a plan, keep yourself organized, and make logical decisions. 
-                       </p>
-                       <p>
-                           <strong>Embrace integrity</strong> - Continue to embrace and adhere to the VCU academic integrity policy. Rams are leaders with regard to taking the <a href="https://conduct.students.vcu.edu//vcu-honor-system/academic-misconduct-/honor-pledge/">VCU honor pledge</a> seriously. 
-                       </p>
-                       <p>
-                          <strong>Practice flexibility</strong>- Your instructors may be learning new things as well. They will be looking at creative ways to deal with assignments, exams, discussions, avenues for student submission of their work, etc. In the end, just put your best foot forward and be open to change.  
-                       </p>
-                       <p>
-                          <strong>Seek support from your classmates</strong>- We encourage you to stay in communication with other students in your own classes and across the university. Find out what’s working for other students and how they’re managing the shift. It’s likely you’ll find different tools and workflows that will be helpful while sharing your own successes. 
-                       </p>
-                       <p>
-                          <strong>Prioritize care, compassion, kindness</strong> - Supporting each other can go a long way. Practice compassion and kindness to your classmates and your faculty. Everyone is doing their best to maintain your courses and stay on track for the semester.
-                       </p> 
-                        <p>
-                          <strong>Speak up if you need to talk</strong>- In times like these, you may need to talk to someone who can listen, support you, and help you focus on your learning. We really do encourage you to reach out to your Academic Advisor if you want to talk. Not sure who is your current advisor, <a href="https://academicadvising.vcu.edu/find/">find your advisor here</a>. They are there for you!! The VCU <a href="https://counseling.vcu.edu/">University Counseling Services</a> is another great source on campus for students. 
-                       </p> 
-                                                  
-                  </div>                
-              </div>
-            </div>
-          <div class="row justify-content-md-center" id="keep-on">            
-
+             <h2>The Ram Frame of Mind</h2>
+             <p>
+                 <strong>Be well</strong>- Our main priority is your health! Please check out the health tips and FAQs on the <a href="https://health.students.vcu.edu/">VCU University Health Services</a>. 
+             </p>
+             <p>
+                <strong>Be proactive</strong>- The more you prepare in advance, the easier the transition. Update your contact information with VCU. At least once a day, check your <a href="http://mail.google.com/a/mymail.vcu.edu">VCU email</a> and any course communication tools (for example, <a href="https://blackboard.vcu.edu/">Blackboard</a>) for updates. 
+             </p>
+             <p>
+                <strong>Stay calm</strong>- Even though you may feel quite stressed or uncertain, try your best to breathe in, breathe out, repeat. Staying calm can help you focus, make a plan, keep yourself organized, and make logical decisions. 
+             </p>
+             <p>
+                 <strong>Embrace integrity</strong> - Continue to embrace and adhere to the VCU academic integrity policy. Rams are leaders with regard to taking the <a href="https://conduct.students.vcu.edu//vcu-honor-system/academic-misconduct-/honor-pledge/">VCU honor pledge</a> seriously. 
+             </p>
+             <p>
+                <strong>Practice flexibility</strong>- Your instructors may be learning new things as well. They will be looking at creative ways to deal with assignments, exams, discussions, avenues for student submission of their work, etc. In the end, just put your best foot forward and be open to change.  
+             </p>
+             <p>
+                <strong>Seek support from your classmates</strong>- We encourage you to stay in communication with other students in your own classes and across the university. Find out what’s working for other students and how they’re managing the shift. It’s likely you’ll find different tools and workflows that will be helpful while sharing your own successes. 
+             </p>
+             <p>
+                <strong>Prioritize care, compassion, kindness</strong> - Supporting each other can go a long way. Practice compassion and kindness to your classmates and your faculty. Everyone is doing their best to maintain your courses and stay on track for the semester.
+             </p> 
+              <p>
+                <strong>Speak up if you need to talk</strong>- In times like these, you may need to talk to someone who can listen, support you, and help you focus on your learning. We really do encourage you to reach out to your Academic Advisor if you want to talk. Not sure who is your current advisor, <a href="https://academicadvising.vcu.edu/find/">find your advisor here</a>. They are there for you!! The VCU <a href="https://counseling.vcu.edu/">University Counseling Services</a> is another great source on campus for students. 
+             </p> 
+                                        
+            </div>                
+          </div>
+        </div>
+        <div class="row justify-content-md-center" id="keep-on">            
           <div class="col-md-8">
             <div class="accordion" id="stu-support">
               <!--tech card-->
