--- a/students/remix.html
+++ b/students/remix.html
@@ -32,35 +32,34 @@
                <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
             </div>
              <!--row nav-->
-            <div class="row" id="know-more">
-              <div class="col-md-12">
-                <h2>What do you want to know more about?</h2>
-              </div>
-              <div class="col-md-3"><a class="app-nav" href="#online-tips">
-                 Online Learning Tips
-                </a></div>
-              <div class="col-md-3"><a class="app-nav" href="#help">
-                  Get help now
-                </a></div>
-                <div class="col-md-3"><a class="app-nav" href="#tech-support">
-                  Tech Support
-                </a></div>
-              <div class="col-md-3"><a class="app-nav" href="#wifi">
-                  Internet Access
-                </a></div>
-              <div class="col-md-3"><a class="app-nav" href="#academic-support">
-                  Academic Support
-                </a></div>
-              <div class="col-md-3"><a class="app-nav" href="#policies">
-                  Policies
-                </a></div>
-                <div class="col-md-3"><a class="app-nav" href="#accommodations">
-                  Accommodations
-                </a></div>
-                <div class="col-md-3"><a class="app-nav" href="#labs">
-                  Labs/Placements
-                </a></div>
-            </div>
+              <div class="col-md-9"> 
+                <div class="row">              
+                  <div class="col-md-3"><a class="app-nav" href="#online-tips">
+                     Online Learning Tips
+                    </a></div>
+                  <div class="col-md-3"><a class="app-nav" href="#help">
+                      Get help now
+                    </a></div>
+                    <div class="col-md-3"><a class="app-nav" href="#tech-support">
+                      Tech Support
+                    </a></div>
+                  <div class="col-md-3"><a class="app-nav" href="#wifi">
+                      Internet Access
+                    </a></div>
+                  <div class="col-md-3"><a class="app-nav" href="#academic-support">
+                      Academic Support
+                    </a></div>
+                  <div class="col-md-3"><a class="app-nav" href="#policies">
+                      Policies
+                    </a></div>
+                    <div class="col-md-3"><a class="app-nav" href="#accommodations">
+                      Accommodations
+                    </a></div>
+                    <div class="col-md-3"><a class="app-nav" href="#labs">
+                      Labs/Placements
+                    </a></div>
+                  </div>
+                </div>
             <!--end nav-->
             <div class="col-md-9" id="online-tips">
                <h2>Tips for Success When Learning Online</h2>
@@ -418,7 +417,6 @@
         
         <script src="../js/main.js"></script>
         <script type="text/javascript" src="//branding.vcu.edu/bar/academic/latest.js" data-color-top-campaign="graydark"></script>
-       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
