--- a/students/remix.html
+++ b/students/remix.html
@@ -40,7 +40,7 @@
                   <div class="col-md-3"><a class="app-nav" href="#help">
                       Get help now
                     </a></div>
-                    <div class="col-md-3"><a class="app-nav" href="#tech-support">
+                    <div class="col-md-3"><a class="app-nav" href="#tech">
                       Tech Support
                     </a></div>
                   <div class="col-md-3"><a class="app-nav" href="#wifi">
@@ -417,7 +417,7 @@
         
         <script src="../js/main.js"></script>
         <script type="text/javascript" src="//branding.vcu.edu/bar/academic/latest.js" data-color-top-campaign="graydark"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
